vtw, two figure macro

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -36,7 +36,7 @@ The term `parallel reality' is proposed to refer to systems such as that develop
 
 \section{Defining Alternate Realities}
 
-Alternate realities, any situations in which the environmental stimuli received by a subject have been somehow modified or mediated, have received substantial attention in recent decades. These themes have been explored for purposes as diverse as education~\cite{Warburton2009} \& new forms of data visualisation~\cite{Coleman2009} to medical~\cite{TenEyck2011} \& military training~\cite{Qiu2009}. Although terms such as \textit{mixed reality} \& \textit{augmented reality} are now relatively common, both in the literature \& in the mainstream, definitions of such terms have often been used in vague \& even conflicting manners.
+Alternate realities, any situations in which the environmental stimuli received by a subject have been somehow modified or mediated, have received substantial attention in recent decades. These themes have been explored for purposes as diverse as education~\cite{Warburton2009} \& new forms of data visualisation~\cite{Coleman2009} to medical~\cite{TenEyck2011} \& military training~\cite{Qiu2009} in addition to entertainment~\cite{Scherrer2008}. Although terms such as \textit{mixed reality} \& \textit{augmented reality} are now relatively common, both in the literature \& in the mainstream, definitions of such terms have often been used in vague \& even conflicting manners.
 
 This chapter investigates popular definitions, classifications \& comparisons of alternate realities, combining \& modifying these parameters to produce a canonical set of definitions for the remainder of this thesis, allowing \textit{parallel reality} to be introduced into a sound classification framework.
 
@@ -75,21 +75,8 @@ Thus, Milgram et al. conclude it is not necessarily true that an environment is 
 
 Another method of illustrating the relationships between different categories of alternate realities was put forward by Roy Want in his introductory article for a 2009 issue of IEEE Pervasive Computing dedicated to the \textit{cross reality} paradigm~\cite{Want2009}. He presents a 2x2 matrix categorising the different terms according to whether the experience and overlay data are real or virtual (figure \ref{original_virtuality_matrix.png}). Whilst this is a useful representation, some of the definitions \& criteria depicted do not match with those of Milgram et al. or even with those of other authors in the same issue of Pervasive, let alone other publications concerning alternate realities. Figure \ref{modified_virtuality_matrix.png} presents a modified version of this matrix that is in keeping with the framework laid out by Milgram et al. \& the wider literature.
 
-\begin{figure}[h]
-\centering
-\begin{minipage}{.5\textwidth}
- 	\centering
- 	\includegraphics[width=0.95\linewidth]{Want_virtuality_matrix_original.png}
- 	\caption{Want's original virtuality matrix.}
-	\label{original_virtuality_matrix.png}
-\end{minipage}%
-\begin{minipage}{.5\textwidth}
-  \centering
-  \includegraphics[width=0.95\linewidth]{Want_virtuality_matrix_modified.png}
-    \caption{Modified Want matrix.}
-    \label{modified_virtuality_matrix.png}
-\end{minipage}
-\end{figure}
+\TwoFig{Want_virtuality_matrix_original.png} {Want's original virtuality matrix.} {Want_virtuality_matrix_original.png}
+       {Want_virtuality_matrix_modified.png} {Modified Want matrix.} {Want_virtuality_matrix_modified.png}
 
 Where the original matrix positions cross reality in the upper left quadrant, at the congruence of `experience virtual' and `overlay data real', the modified matrix positions augmented virtuality. Referencing Milgram's continuum, `experience virtual' relates to a position somewhere within the right half, while `overlay data real' relates to presentation over this necessarily virtual environment of sampled real world data, resulting in a partially modelled environment, leaving us in the area of the continuum occupied by augmented virtuality.
 
@@ -107,29 +94,10 @@ Steve Mann, the \textit{``father of wearable computing''}~\cite{Schofield2012} \
 
 Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reality at a subset of mixed reality, but then further places virtual reality at a subset of augmented reality \& in turn mixed reality. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, as although virtual reality is by definition mediated, it is not necessarily always presented as part of an augmented or mixed reality, as purely virtual environments can \& do exist - Mann himself states that \textit{``mixed reality exists in many forms along a continuum from augmented reality \ldots\ to more recent efforts at augmented virtuality''}, which is contrary to the diagram's representation of virtual reality as necessarily a subset of augmented reality \& in turn of mixed reality. Furthermore the modified diagram introduces augmented virtuality, mentioned by Mann in his prose but not included in the original diagram. An overlap is also introduced between those modulated reality environments that are also classified as mixed reality, as it is perplexing to think of a mixed reality environment that is neither augmented reality nor augmented virtuality (at least when considering a wholly real environment \& a wholly virtual environment as the logically possible extremes, as in Milgram et al.'s continuum).
 
+\TwoFig{Mann_venn_original.png} {Original Mann Venn diagram.} {Mann_venn_original.png}
+       {Mann_venn_mod_1.png} {Modified Mann Venn diagram.} {Mann_venn_mod_1.png}
+
 \begin{figure}[h]
-\centering
-\begin{minipage}{.5\textwidth}
-  \centering
-  \includegraphics[width=0.95\linewidth]{Mann_venn_original.png}
-  \caption{Original Mann Venn diagram.}
-  \label{Mann_venn_original.png}
-\end{minipage}%
-\begin{minipage}{.5\textwidth}
-  \centering
-  \includegraphics[width=0.95\linewidth]{Mann_venn_mod_1.png}
-    \caption{Modified Mann Venn diagram.}
-    \label{Mann_venn_mod_1.png}
-\end{minipage}
-
-%%%
-\end{figure}
-
-%\vspace{5mm}
-
-%%%
-\begin{figure}[h]
-
 \centering
   \includegraphics[width=0.5\linewidth]{Mann_venn_mod_3.png}
   \caption{Further modified Mann Venn diagram.}
@@ -335,21 +303,8 @@ XR as an alternate reality paradigm has its roots in work undertaken by the IBM 
 
 It was the work of the Responsive Environments Group at MIT's Media Lab, centred around the research of Joshua Lifton in combining the Plug sensor/actuator platform~\cite{Lifton2007b} with a Second Life hosted virtual model of the physical Lab in the `Shadow Lab' project, that truly launched XR as a research area. The Shadow Lab project did not allow for tandem visual engagement with both constituent environments of the cross reality platform, focussing instead on the interplay of sensor data \& actuator commands exchanged between the environments. The visual aspect was addressed in part by the subsequent Ubiquitous Sensor Portal project, which situated 45 I/O rich `portals' (figure \ref{ubiquitous_sensor_portal.jpg}) throughout the Lab, each with a corresponding extension in Second Life. However in stark contrast to the Dual Reality Lab, the virtual portals were not situated in a simulation of the real Media Lab in situations corresponding to their physical location, but instead used a more abstract virtual representation with a geometric layout reflecting intellectual affiliation as opposed to real-world location.
 
-\begin{figure}[h]
-\centering
-\begin{minipage}{.5\textwidth}
-  \centering
-  \includegraphics[width=0.95\linewidth]{lifton_shadow_lab.png}
-  \caption{Side view of the virtual Shadow Lab.}
-  \label{lifton_shadow_lab.png}
-\end{minipage}%
-\begin{minipage}{.5\textwidth}
-  \centering
-  \includegraphics[width=0.95\linewidth]{ubiquitous_sensor_portal.jpg}
-    \caption{A Ubiquitous Sensor Portal.}
-    \label{ubiquitous_sensor_portal.jpg}
-\end{minipage}
-\end{figure}
+\TwoFig{lifton_shadow_lab.png} {Side view of the virtual Shadow Lab.} {lifton_shadow_lab.png}
+       {ubiquitous_sensor_portal.jpg} {A Ubiquitous Sensor Portal.} {ubiquitous_sensor_portal.jpg}
 
 One of the driving motivations behind this work was what Lifton dubbed `the vacancy problem';
 
@@ -506,7 +461,7 @@ Although the use cases for PR systems that feature completely unrelated real \& 
 
 In the opening quote to this chapter, taken from Neal Stephenson's cyberpunk novel \textit{Snow Crash}, the protagonist enquires about the location of another character, called Y.T., both in the real world and in the `Metaverse'. For the sake of this discussion, the Metaverse can be considered analogous to a virtual world akin to Second Life, accessed via a head mounted display, and comprises an entirely synthetic virtual world whose locations have no counterparts in the real world. Y.T.'s response is that \textit{``In  the Metaverse, I'm on a plusbound monorail train. Just passed by Port 35.''} whilst in reality she is at a \textit{``Public terminal across the street from a Reverend Wayne's"}.
 
-In this scenario there is no spatial equivalence between the real environment and the virtual environment - they are not the same `place', however the protagonist still wishes to be able to experience both by transitioning between them, paying attention to one while travelling through the other. While this situation is currently science fiction, recent developments in mobile VR platforms such as Samsumg Gear VR hint that we are not so far away from a time in which members of the general public will wish to multiplex their real environment with a virtual one while in public, in the same way that people commonly engage in computer-mediated communication (CMC) via their smartphones at the same time as walking through real environments \& conversing with the people in them, in instantiations of PoSR. Informing the implementation of transitions in such systems with the findings of the experiments in this thesis into spatially equivalent PR systems promises to be beneficial to them.
+In this scenario there is no spatial equivalence between the real environment and the virtual environment - they are not the same `place', however the protagonist still wishes to be able to experience both by transitioning between them, paying attention to one while travelling through the other. While this situation is currently science fiction, recent developments in mobile VR platforms such as Samsumg Gear VR hint that we are not so far away from a time in which members of the general public will wish to multiplex their real environment with a virtual one while in public, in the same way that people commonly engage in computer-mediated communication (CMC) via their smartphones at the same time as walking through real environments \& conversing with the people in them, in instantiations of PoSR. With the majority of players of popular Massively Multiplayer Online games (MMOs) wishing they could spend more time playing, over a fifth even wanting to spend all of their time in game~\cite{Castronova2006}, and with social roles and the community aspect constituting key aspects of these game's popularity~\cite{Castronova2006, Bartle2004}, informing the implementation of transitions between real \& virtual in such systems with the findings of the experiments in this thesis into spatially equivalent PR systems promises to be beneficial to the further development of 3D social CMC.
 
 %=========================================================================================================
 
@@ -721,8 +676,6 @@ Thus, a PR platform is well suited to situations in which interaction with the v
 \end{itemize}
 
 \textbf{***mention the redecorating/remodelling example, the `real world as canvas for artistic expression' example, etc.}
-
-\textbf{***Case for non spatially equivalent PR - With the majority of players of popular Massively Multiplayer Online games (MMOs) wishing they could spend more time playing, over a fifth even wanting to spend all of their time in game~\cite{Castronova2006}, and with social roles and the community aspect constituting key aspects of these game's popularity~\cite{Castronova2006, Bartle2004}, exploring approaches for achieving 3D PoSR is prudent as demand for access to 3D social environments will only increase as 3D Web technologies further develop and more increasingly appeal to general social Web users and to educators in addition to gamers.}
 
 %=========================================================================================================
 
