--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -19,17 +19,15 @@ Alternate reality technologies have been used for over two decades~\cite{Roussou
 
 These techniques provide access to locations \& artefacts scatted about the world, that may reside in private collections inaccessible to scholars (let alone interested amateurs) \& outwith of their original context of creation~\cite{griffin:recovering}. Many cultural heritage objects are deteriorating \& are at risk of being lost, both due to natural causes such as weather \& natural disasters but also due to acts of man such as civil war~\cite{Ikeuchi2003}.
 
-Virtual heritage techniques also offer substantial benefits to collaborative investigation of sites, where multiple users are provided the ability to collaborate via a multitude of different visualization modalities including video see-through, head-tracked head mounted displays, projected table surfaces, large screen displays \& tracked hand-held displays, including the ability for experts physically located at a particular site to collaborate with those physically remote~\cite{benko:collaborative}.
+Virtual heritage techniques offer substantial benefits to collaborative investigation of sites, where multiple users are provided the ability to collaborate via a multitude of different visualization modalities including video see-through, head-tracked head mounted displays, projected table surfaces, large screen displays \& tracked hand-held displays, including the ability for experts physically located at a particular site to collaborate with those remote to it~\cite{benko:collaborative}.
 
-The combination of different techniques not only benefits experts, but has also been used in the creation of a contiguous platform for building \& managing exhibitions of 3D models of artefacts accessed in museums, galleries \& via the Web via Web3D technologies~\cite{Wojciechowski2004}, focussed not only on the digitization \& subsequent interaction with such content to aid its preservation \& protection, but also with making these resources as widely available as possible to any interested parties (scientists, archaeologists, curators, historians \& casual citizens)~\cite{walczak:applications}.
+The combination of different techniques not only benefits experts, but has also been used in the creation of a contiguous platform for building \& managing exhibitions of 3D models of artefacts accessed in museums, galleries \& via the Web via Web3D technologies~\cite{Wojciechowski2004}, focussed not only on the digitization \& subsequent interaction with such content to aid its preservation \& protection, but also with making these resources as widely available as possible to any interested parties (scientists, archaeologists, curators, historians \& casual citizens)~\cite{walczak:applications}. Even traditionally two-dimensional visual resources associated with cultural heritage can be integrated into such state-of-the-art systems, visualized via immersive CAVE techniques as part of `information landscapes'~\cite{Ruffaldi2008}.
 
-Even traditionally two-dimensional visual resources associated with cultural heritage can be integrated into state-of-the-art systems, visualized via immersive CAVE techniques as part of `information landscapes'~\cite{Ruffaldi2008}.
-
-Employing virtual heritage is of particular benefit to young people as cultural heritage sites often arouse little involvement in them, especially if the site's present day appearance bears few traces of its original stature \& makes it difficult to appreciate its original splendour \& importance~\cite{ardito:combining}.
+Virtual heritage is of particular benefit to young people as cultural heritage sites often arouse little involvement in them, especially if the site's present day appearance bears few traces of its original stature \& makes it difficult to appreciate its original splendour \& importance~\cite{ardito:combining}.
 
 %=========================================================================================================
 
-\subsection{Alternate Reality Techniques in Cultural Heritage}
+\subsection{Alternate Reality Techniques in Virtual Heritage}
 
 Due to the number of combinations \& diversity in approaches that have been used in the application of visualization techniques to the cultural heritage sector, attempting to comprehensively list them is impractical. Comparison via a taxonomical model that classifies approaches according to various characteristics is thus the approach adopted by Foni et al.~\cite{Foni2010} which produced the taxonomical space shown by figure \ref{taxonomy_1.png}.
 
@@ -59,11 +57,100 @@ The position of 16 exemplar visualization techniques applied to cultural heritag
 
 %=========================================================================================================
 
+AR has been used to add artefacts, actors \& reconstructed architecture to views of present day sites that are still accessible \& may bear traces of their original status, whilst VR has been used to host more complete reconstructions of entire buildings \& settlements for interaction via screen, HMD \& CAVE, including where the present day site bears no evidence of its past status or is inaccessible for some reason (due to latter development, change in landscape, etc.).
+
+The ARCHEOGUIDE project (Augmented Reality-based Cultural Heritage On-site GUIDE)~\cite{vlahakis:archeoguide} aimed to provide a `personalized electronic guide \& tour assistant' to cultural heritage site visitors. On-site help \& augmented reality reconstructions of on-site ruins were presented via a laptop, a tablet computer \& a PDA, using GPS for location tracking \& magnetometer to ascertain direction such that augmentations could be placed accordingly. The applications claimed to be supported by the platform range from archaeological research to education, multimedia publishing \& cultural tourism. The platform was prototyped at the archaeological site of Olympia, Greece.
+
+As well as being used for walking tours, augmented reality has been combined with the concept of telepresence to create `augmented telepresence', allowing participants to experience a `fly-through' of the ancient Nara Heijo-kyo capital of Japan, by combining aerially captured omnidirectional video augmented with related information using AR techniques~\cite{Okura2006,Okura2011}.
+
+Augmenting views of the real world with real-time animated virtual humans has been explored by several projects, including the LIFEPLUS EU IST project, which aimed to produce ``an innovative 3D reconstruction of ancient frescos-paintings through the real-time revival of their fauna and flora, featuring groups of virtual animated characters with artificial life dramaturgical behaviors, in an immersive AR environment''. This project pushed established augmented reality applications to the field by exploring narrative design in fictional spaces, with the aim of increasing immersion via realistic interaction, making use of captured/real-time video of a real scene~\cite{Papagiannakis2004}, presenting the visitor with ``an immersive and innovative multi-sensory interactive trip to the past''~\cite{Papagiannakis2005}. These realistic simulations of animated virtual human actors were employed in a mobile \& wearable setup, in abandonment of traditional concepts of static cultural artefacts or rigid augmentations of real world features, making use of a markerless camera tracker \& mixed reality illumination model for more consistent real-virtual \& virtual-real rendering. This platform was demonstrated in a case study on the real site of ancient Pompeii \& whilst initially targetted at the cultural heritage sector, the author(s) clarifies that as a platform it in no way limited to use with such subjects~\cite{Papagiannakis2007}. This concept of extending rigid \& static AR with character-based event representations hopes to recreate not just discrete artefacts but the entirety of `daily life' at the scene~\cite{Papagiannakis2009}.
+
+Although many applications of AR to cultural heritage sites are mobile in nature, using a variety of tracking techniques to localise the user \& determine their orientation, including GPS~\cite{vlahakis:archeoguide}, visual tracking of robust features of the environment~\cite{Kim2009} \& omnidirectional range sensing of a landmark database~\cite{Taketomi2011}, there are also those that present a static interface similar to coin-operated telescopes situated at popular tourist attractions~\cite{Weng2012}.
+
+%=========================================================================================================
+
+VR is not only useful where the real site is no longer accessible, too remote or does not bear any similarity to its original status, but also allows for more effective control over the atmospheric qualities of the environment being recreated; effects such as fog, sky, water, particles, by exploiting the latest graphical hardware by making use of shaders to deliver high quality graphics~\cite{deamicis:gamebased}. The use of a head mounted display or CAVE~\cite{cabral:x3dexperience,Christou2006} that completely blocks stimuli from the user's real world surroundings allows for this complete level of control. Unless an AR system employs various environmental monitoring techniques, the augmentations that it overlays upon the user's view of the real world will often look out of place due to differing illumination than their real surroundings which has an effect upon their perceived realism~\cite{mcnamara:lightness}.
+
+However whereas many heritage representations, architectural walkthroughs \& simulations of artefacts \& places have defined a practice where photorealism is considered an important measure of the representation's success, there is an argument that whilst such an emphasis on realism \& historical accuracy \& authenticity is important, such photorealistic methods can limit the flexibility of the reconstructions with regards to how much they can be modified \& altered to explore different reconstruction hypotheses~\cite{roussou:photorealism}.
+
+Emphasis on photorealistic graphical quality also has considerations when it comes to real time performance \& many intelligent techniques must be employed to maintain acceptable performance as complexity of reconstructions increases~\cite{willmott:largecomplex}. Particularly for dissemination to the public in museums \& visitor centres, acceptable performance is usually considered more important than extreme historical accuracy.
+
+%=========================================================================================================
+
 \section{Virtual Heritage at the University of St Andrews}
+The Open Virtual Worlds (OVW) research group at the School of Computer Science at the University of St Andrews has been employed in virtual heritage projects since 2007~\cite{Getchell2007}, producing a number of reconstructions of cultural heritage sites in Scotland \& further afield. These reconstructions have been produced through collaborations with academics from the university's Art History, History \& Archaeology departments as well as with domain experts from heritage organisations including Historic Scotland \& the National Trust for Scotland.
+
+These projects range from small reconstructions of a church to much larger reconstructions such as that of the cathedral at St Andrews (figure \ref{cathedral_real_outside.jpg}, \ref{cathedral_reconstruction_above.jpg}), which represents several years of work~\cite{Kennedy2013}. Some of these projects were built as research projects (the cathedral), others for use in schools in Scotland (Linlithgow palace, figure \ref{linlithgow_real.jpg}, \ref{linlithgow_reconstruction.png}), others for outreach purposes (Mosfell Viking farmstead) \& still others were built specifically for installation into museums (St Kilda, Caen Township, Eyemouth Fort).
+
+
+These reconstructions were made using the OpenSim server, an open source implementation \& extension of the Second Life platform which is compatible with the numerous forks of the Second Life client program.
+
+This architecture was adopted due to the ease \& convenience with which it allowed the construction \& dissemination of the models, thanks to the OpenSim client/server model allowing the models to be accessed in various deployment scenarios including temporary deployments within 
+
+Some of these reconstructions are inhabited with virtual humans that are scripted to perform certain actions specific to the role at the site that they are depicting (figure \ref{cathedral_npc_standing.png}, \ref{cathedral_npc_talking.png}).
+
+
+
+\TwoFig{cathedral_real_outside.jpg} {St Andrews cathedral today.} {cathedral_real_outside.jpg}
+       {cathedral_reconstruction_above.jpg} {St Andrews cathedral reconstruction.} {cathedral_reconstruction_above.jpg}
+
+
+\TwoFig{cathedral_npc_standing.png} {Virtual humans in cathedral reconstruction.} {cathedral_npc_standing.png}
+       {cathedral_npc_talking.png} {Conversing with virtual humans.} {cathedral_npc_talking.png}
+
+%\TwoFig{} {} {}
+%       {} {} {}
+
+
+\TwoFig{linlithgow_real.jpg} {Linlithgow Palace today.} {linlithgow_real.jpg}
+       {linlithgow_reconstruction.png} {Linlithgow Palace reconstruction.} {linlithgow_reconstruction.png}
+
+\TwoFig{mosfell_outside.jpg} {Mosfell Viking Longhouse} {mosfell_outside.jpg}
+	   {mosfell_inside.jpg} {Wireframe rendering of longhouse} {mosfell_inside.jpg}
+
+%mosfell_outside.jpg
+%mosfell_inside.jpg
+
+%caen_township_outside.jpg
+%caen_township_inside_wireframe.jpg
+
+models
+	pictures
+
+
+
+how they are made, what technologies are used
+	Second Life/OpenSim
+	
+process
+	GIS data to create landscape (Ordnance Survey high resolution elevation maps)
+	LIDAR or GPS surveys if these exist for the site due to a previous archaeological investigation
+	measurements from various sources for the structures; online mapping/satellite views, archaeological surveys, contemporary accounts, views of the site (if anything still exists), photographs
+	experts are then used to iteratively improve the model, trying out various hypotheses to find the most applicable
+	360 panorama photos are used for the background
+	
+	
+	
+how they are used
+	workshops at schools \& museums, where everything is taken \& set up then torn down at the end of the day
+		using screens, xbox controllers, mouse \& keyboard, sometimes Rift, shared by a small group \& given a worksheet with tasks on, usually 20-40 minutes long, mention `experiential learning'
+		pictures
+		10 schools, both primary \& secondary, have hosted one or more developments
+	John's work
+		permanent installation
+		using multihead projection \& NUI
+		pictures
+how these dissemination styles fit into the 4D model
+
+bring in concept of local sites \& the physical separation between the school \& the site (especially Madras \& the cathedral)
+
 
 Background into the content that the group has produced, how it produced it, how it uses it, talk about different ways of interacting with it (including John's Kinect stuff, school children using \& enjoying Rift).
 
 Lots of pictures of virtual content \& of people experiencing this content via the different interaction methods.
+
+
+
 
 %=========================================================================================================
 
@@ -90,6 +177,10 @@ How to interface sensor data with Second Life client - either try to make use of
 %=========================================================================================================
 
 \subsection{Second Life/OpenSim}
+
+\cite{willmott:largecomplex} occlusion culling etc., missing in Second Life/OpenSim
+
+
 
 Talk about history of Second Life/OpenSim in academia/research, including original cross reality research.
 
@@ -197,21 +288,8 @@ Go through Arduino sketch \& talk about things like magnetic declination, etc.
   \label{arduino_wiring_hmc_ublox.png}
 \end{figure}
 
-\begin{figure}[h]
-\centering
-\begin{minipage}{.5\textwidth}
- 	\centering
- 	\includegraphics[width=0.95\linewidth]{arduino_hmc6343_u-blox_MAX-6.jpg}
- 	\caption{Assembled Arduino + HMC6343 + u-blox MAX-6.}
-	\label{arduino_hmc6343_u-blox_MAX-6.jpg}
-\end{minipage}%
-\begin{minipage}{.5\textwidth}
-  \centering
-  \includegraphics[width=0.95\linewidth]{pangolin_tablet_back.jpg}
-    \caption{Arduino package attached to rear of tabet computer.}
-    \label{pangolin_tablet_back.jpg}
-\end{minipage}
-\end{figure}
+\TwoFig{arduino_hmc6343_u-blox_MAX-6.jpg} {Assembled Arduino/sensors.} {arduino_hmc6343_u-blox_MAX-6.jpg}
+       {pangolin_tablet_back.jpg} {Arduino/sensors attached to tabet.} {pangolin_tablet_back.jpg}
 
 the viewer was modified (giving rise to the Pangolin viewer) to make use of the Boost.Asio C++ library to support receiving data via serial port and to use these data to control the movement of the avatar and camera by directly interfacing with the control functions at a lower level of abstraction. Receipt of messages is performed in an asynchronous non-blocking fashion, with the viewer's main loop processing the most recently received message in each iteration. Messages follow the format
 
@@ -230,21 +308,8 @@ The viewer's GUI was modified with the addition of a dialogue that allows the us
 
 \section{Using the Virtual Time Window}
 
-\begin{figure}[h]
-\centering
-\begin{minipage}{.5\textwidth}
- 	\centering
- 	\includegraphics[width=0.95\linewidth]{pangolin_laptop_router_battery.jpg}
- 	\caption{Server \& router provision for VTW use.}
-	\label{pangolin_laptop_router_battery.jpg}
-\end{minipage}%
-\begin{minipage}{.5\textwidth}
-  \centering
-  \includegraphics[width=0.95\linewidth]{pangolin_in_use.jpg}
-    \caption{VTW in use at St Andrews cathedral.}
-    \label{pangolin_in_use.jpg}
-\end{minipage}
-\end{figure}
+\TwoFig{pangolin_laptop_router_battery.jpg} {OpenSim Server \& wireless AP.} {pangolin_laptop_router_battery.jpg}
+       {pangolin_in_use.jpg} {VTW at the cathedral.} {pangolin_in_use.jpg}
 
 Two plausible modalities of interaction were identified for this system, with each presenting different requirements with regards to accuracy of position tracking.
 
